# Contact-book

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
contact_book/: __init__.py  asgi.py  settings.py  wsgi.py
gize/: asgi.py  settings.py  urls.py  wsgi.py
gize/apps/contacts/: admin.py  apps.py  exceptions.py  models.py  serializers.py  views.py
gize/apps/contacts/migrations/: 0001_initial.py  0002_contact_user_id_ref.py  0003_contact_last_name.py  0004_contact_description.py  0005_alter_contact_user_id_ref.py  0006_remove_phonetype_slug_alter_phonetype_name.py
gize/apps/management/: apps.py  auth.py  http_helpers.py
gize/apps/user/: admin.py  apps.py  models.py  serializers.py  views.py
gize/apps/user/migrations/: 0001_initial.py  0002_rename_user_userinformation.py  0003_alter_userinformation_email.py  0004_alter_userinformation_email.py  0005_userinformation_user_id_ref.py
scripts/: start.sh
